Bug 425196 - Removing KMyMoney Focus Auto Inputs Transaction Amount
Summary: Removing KMyMoney Focus Auto Inputs Transaction Amount
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-10 15:51 UTC by jmadero
Modified: 2025-07-31 14:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jmadero 2020-08-10 15:51:12 UTC
SUMMARY
Removing focus off of KMyMoney while in the middle of putting a transaction in results in incorrect value being entered without pushing enter.

STEPS TO REPRODUCE
1. Start a new transaction
2. Start putting a value into the "Amount" field - do not finalize the value (for instance, if the value is meant to be 1,000.45, put in 100 -- do not push enter)
3. Change focus to another window

OBSERVED RESULT
Value of "100.00" will be automatically put in amount field.

EXPECTED RESULT
Value should not be automatically entered, instead when you return to KMyMoney window the cursor should be where you left off (100) and allow you to finish putting in your number.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Bodhi Linux
(available in About System)

ADDITIONAL INFORMATION
It is extremely common to have to bounce between windows when upkeeping financial records. The most common scenario is when someone is putting in a larger value and they have to go back to their bank website (or credit card website) to remember the entire number. Having KMyMoney auto enter the value creates unnecessary extra steps of having to re-enter the value field, remove extraneous ".00" and then finish putting in the value.
Comment 1 jesse 2020-08-10 21:30:14 UTC
Can I +1 this? 

:) 

This happens to me also when bouncing between ledgers. I go to see check one Credit card and come back to my bank and the amount has been entered. It can get confusing as sometimes, the date is also an older date (maybe I had to enter a previous transaction) and now there is a transaction out there with the wrong amount and wrong date.. lol
Comment 2 Thomas Baumgart 2025-07-31 08:56:56 UTC
Git commit ae55e93d33325bde980d994771191d9d38717edf by Thomas Baumgart.
Committed on 31/07/2025 at 07:18.
Pushed by tbaumgart into branch 'master'.

Don't modify amount upon switch to other application

Only do so if focus is moved to other widget in the application.
FIXED-IN: 5.2.1

M  +19   -17   kmymoney/widgets/amountedit.cpp

https://invent.kde.org/office/kmymoney/-/commit/ae55e93d33325bde980d994771191d9d38717edf
Comment 3 Thomas Baumgart 2025-07-31 14:14:42 UTC
Git commit 3d6595a3a63052532a85add522648e42d056f341 by Thomas Baumgart.
Committed on 31/07/2025 at 14:14.
Pushed by tbaumgart into branch '5.2'.

Don't modify amount upon switch to other application

Only do so if focus is moved to other widget in the application.
FIXED-IN: 5.2.1
(cherry picked from commit ae55e93d33325bde980d994771191d9d38717edf)

M  +19   -17   kmymoney/widgets/amountedit.cpp

https://invent.kde.org/office/kmymoney/-/commit/3d6595a3a63052532a85add522648e42d056f341