Don't modify amount upon switch to other application

Only do so if focus is moved to other widget in the application.

BUG: 425196
FIXED-IN: 5.2.1
(cherry picked from commit ae55e93d33325bde980d994771191d9d38717edf)